--- a/appspec.yml
+++ b/appspec.yml
@@ -1,10 +1,10 @@
 version: 0.0
 os: linux
 files:
-  - source: dist/my-calculator-project
-    destination: /var/www/my-calculator-project
+  - source: dist/my-angular-project
+    destination: /var/www/my-angular-project
 permissions:
-  - object: /var/www/my-calculator-project
+  - object: /var/www/my-angular-project
     pattern: '**'
     mode: '0755'
     owner: root
